--- a/CERVERICA/.gitignore
+++ b/CERVERICA/.gitignore
@@ -483,7 +483,7 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 
-appsettings.json
-appsettings.Development.json
+#appsettings.json
+#appsettings.Development.json
 .idea/misc.xml
 CERVERICA/obj/
