--- a/.gitignore
+++ b/.gitignore
@@ -485,6 +485,7 @@ $RECYCLE.BIN/
 *.swp
 
 CERVERICA/appsettings.json
+CERVERICA/launchSettings.json
 CERVERICA/appsettings.Development.json
 CERVERICA/Migrations/
 
