--- a/CERVERICA/appsettings.json
+++ b/CERVERICA/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"cadenaSQL": "Data Source=JESUS-LUVIAN-D1;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    "cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=LAPTOP-3027LH5V;Initial Catalog=cervericaDB; user id=sa;password=c121217;TrustServerCertificate=true; MultipleActiveResultSets=true"
-    "cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    //"cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
 
   },
   "JWTSetting": {
