--- a/CERVERICA/appsettings.json
+++ b/CERVERICA/appsettings.json
@@ -10,7 +10,7 @@
 
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=LAPTOP-3027LH5V;Initial Catalog=cervericaDB; user id=sa;password=c121217;TrustServerCertificate=true; MultipleActiveResultSets=true"
-    "cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    "cadenaSQL": "Data Source=DANI-PC;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
 
 
   },
