--- a/CERVERICA/appsettings.json
+++ b/CERVERICA/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=LAPTOP-3027LH5V;Initial Catalog=cervericaDB; user id=sa;password=c121217;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=mario123;TrustServerCertificate=true; MultipleActiveResultSets=true"
     "cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
   },
   "JWTSetting": {
