agregue campos lotesminimos y lotesmaximos a receta con stock

--- a/CERVERICA/appsettings.json
+++ b/CERVERICA/appsettings.json
@@ -10,7 +10,8 @@
 
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=LAPTOP-3027LH5V;Initial Catalog=cervericaDB; user id=sa;password=c121217;TrustServerCertificate=true; MultipleActiveResultSets=true"
-    "cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    //"cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    "cadenaSQL": "Data Source=ERICK\\MSSQLSERVER09;Initial Catalog=cervericaDB; user id=sa;password=1234;TrustServerCertificate=true; MultipleActiveResultSets=true"
 
 
   },
