--- a/CERVERICA/appsettings.json
+++ b/CERVERICA/appsettings.json
@@ -1,16 +1,23 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "MyNamespace": "Debug"
+      }
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=LAPTOP-3027LH5V;Initial Catalog=cervericaDB; user id=sa;password=c121217;TrustServerCertificate=true; MultipleActiveResultSets=true"
-    //"cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
-    "cadenaSQL": "Data Source=ERICK\\MSSQLSERVER09;Initial Catalog=cervericaDB; user id=sa;password=1234;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    "cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    //"cadenaSQL": "Data Source=ERICK\\MSSQLSERVER09;Initial Catalog=cervericaDB; user id=sa;password=1234;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=mario123;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
   },
