Controller de configuraciones generales (registrar, actualizar y ver configuraciones generales), Controller de configuraciones de ventas de mayoreo (registrar, actualizar y ver configuracion de ventas de mayoreo), Controller de relgas de puntos (registrar, actualizar y ver reglas de puntos), Controller modulo de cambio de agente (dar la opcion de seleccionar un cambio de agente o no), Comente HostedServiceRoutines por error en insumoscaducados (no tengo insumos xd)

--- a/CERVERICA/appsettings.json
+++ b/CERVERICA/appsettings.json
@@ -16,8 +16,8 @@
   "ConnectionStrings": {
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=RAMBE;Initial Catalog=cervericaDB; user id=sa;password=c121217;TrustServerCertificate=true; MultipleActiveResultSets=true"
-    "cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
-    //"cadenaSQL": "Data Source=ERICK\\MSSQLSERVER09;Initial Catalog=cervericaDB; user id=sa;password=1234;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    //"cadenaSQL": "Data Source=DAMIAN-ASUSLAP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
+    "cadenaSQL": "Data Source=ERICK\\MSSQLSERVER09;Initial Catalog=cervericaDB; user id=sa;password=1234;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=mario123;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=localhost;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
     //"cadenaSQL": "Data Source=DANI-LAPTOP;Initial Catalog=cervericaDB; user id=sa;password=root;TrustServerCertificate=true; MultipleActiveResultSets=true"
