--- a/CERVERICA/CERVERICA.csproj
+++ b/CERVERICA/CERVERICA.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="35.6.1" />
+		<PackageReference Include="DotNetEnv" Version="3.1.1" />
 		<PackageReference Include="FirebaseAdmin" Version="3.0.1" />
 		<PackageReference Include="Google.Apis" Version="1.68.0" />
 		<PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
