--- a/CERVERICA/Properties/launchSettings.json
+++ b/CERVERICA/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://0.0.0.0:5000;http://localhost:5000",
+      "applicationUrl": "https://0.0.0.0:5000;https://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
